# EECS498-007

./: .gitattributes  .gitignore  Notes.docx  README.md
Assignment 1/: knn.ipynb  knn.py  pytorch101.ipynb  pytorch101.py
Assignment 2/: challenge_problem.ipynb  linear_classifier.ipynb  linear_classifier.py  softmax_best_model.pt  svm_best_model.pt  two_layer_net.ipynb  two_layer_net.py
Assignment 3/: best_overfit_five_layer_net.pth  convolutional_networks.ipynb  convolutional_networks.py  fully_connected_networks.ipynb  fully_connected_networks.py  overfit_deepconvnet.pth
Assignment 3/eecs598/: utils.py
Assignment 4/: common.py  one_stage_detector.ipynb  one_stage_detector.py  two_stage_detector - backup before errata.py  two_stage_detector.py  two_stage_detector_github.py
Assignment 4/eecs598/: utils.py
Assignment 5/: Transformers.ipynb  rnn_lstm_captioning.ipynb  rnn_lstm_captioning.py  transformers.py
Assignment 5/eecs598/: utils.py
Assignment 6/: gan.py  generative_adversarial_networks.ipynb  main.py  network_visualization.py  pyproject.toml  style_transfer.py  vae.py  variational_autoencoders.ipynb
